# Windows-Remote-Control

./: .gitignore  README.md  config.example.json  install.bat  install_user_autostart.bat  pyproject.toml  remove_user_autostart.bat  requirements.txt  start.bat
src/win_tg_pc_controller/: actions.py  apps.py  bot.py  clipboard.py  config.py  i18n.py  language_store.py  processes.py  screenshot.py  security.py  status.py  windows_session.py
tests/: test_apps.py  test_bot.py  test_clipboard.py  test_i18n.py  test_language_store.py  test_processes.py  test_security.py  test_status.py  test_windows_session.py
