[project]
name = "windows-telegram-pc-controller"
version = "0.1.0"
description = "A Windows Telegram bot for safe, allowlisted PC status and controls."
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot==21.10",
  "psutil==6.1.1",
  "mss==10.0.0",
  "Pillow==11.1.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[project.scripts]
win-tg-pc-controller = "win_tg_pc_controller.__main__:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
